--- a/index.html
+++ b/index.html
@@ -3,189 +3,160 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Minimal Portfolio | Design Vibe</title>
+<title>PORTFOLIO</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
-/* ===============================
-   Reset & Base
-=============================== */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+* { margin:0; padding:0; box-sizing:border-box; }
 
 body {
     font-family: 'Inter', sans-serif;
-    background: #ffffff;
-    color: #1a1a1a;
+    background:#fff;
+    color:#1a1a1a;
 }
 
-/* ===============================
-   Navigation
-=============================== */
+/* ================= NAV ================= */
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 60px;
-    position: sticky;
-    top: 0;
-    background: rgba(255,255,255,0.9);
-    z-index: 10;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:40px 60px;
+    position:sticky;
+    top:0;
+    background:rgba(255,255,255,0.9);
+    z-index:10;
 }
 
-.logo {
-    font-weight: 600;
-    letter-spacing: -0.4px;
+.logo a {
+    font-weight:600;
+    letter-spacing:-0.4px;
+    text-decoration:none;
+    color:inherit;
 }
 
 nav ul {
-    display: flex;
-    gap: 40px;
-    list-style: none;
+    display:flex;
+    gap:40px;
+    list-style:none;
 }
 
-nav li {
-    font-size: 0.85rem;
-    letter-spacing: 1px;
-    cursor: pointer;
-    opacity: 0.8;
+nav li a {
+    font-size:0.85rem;
+    letter-spacing:1px;
+    text-decoration:none;
+    color:inherit;
+    opacity:.8;
 }
 
-/* ===============================
-   Gallery
-=============================== */
+nav li a:hover {
+    opacity:1;
+}
+
+/* ================= GALLERY ================= */
 .gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
-    padding: 0 60px 80px;
-    max-width: 1600px;
-    margin: auto;
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    gap:40px;
+    padding:0 60px 80px;
+    max-width:1600px;
+    margin:auto;
 }
 
-.item {
-    cursor: pointer;
-}
+.item { cursor:pointer; }
 
 .image-wrapper {
-    position: relative;
-    aspect-ratio: 4 / 3;
-    overflow: hidden;
-    background: #eee;
+    position:relative;
+    aspect-ratio:4/3;
+    overflow:hidden;
 }
 
 .item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform .8s cubic-bezier(.16,1,.3,1);
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    transition:transform .8s cubic-bezier(.16,1,.3,1);
 }
 
-/* Hover Zoom */
-.item:hover img {
-    transform: scale(1.05);
-}
+.item:hover img { transform:scale(1.05); }
 
-/* ===============================
-   ▶ Play Icon + Fade
-=============================== */
+/* PLAY ICON */
 .play-overlay {
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.35);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transition: opacity .4s ease;
+    position:absolute;
+    inset:0;
+    background:rgba(0,0,0,.35);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    opacity:0;
+    transition:opacity .4s ease;
 }
+
+.item:hover .play-overlay { opacity:1; }
 
 .play-icon {
-    width: 70px;
-    height: 70px;
-    border: 2px solid white;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width:70px;
+    height:70px;
+    border:2px solid #fff;
+    border-radius:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 
 .play-icon::before {
-    content: '';
-    margin-left: 4px;
-    border-style: solid;
-    border-width: 10px 0 10px 16px;
-    border-color: transparent transparent transparent white;
+    content:'';
+    margin-left:4px;
+    border-style:solid;
+    border-width:10px 0 10px 16px;
+    border-color:transparent transparent transparent #fff;
 }
 
-/* Fade in */
-.item:hover .play-overlay {
-    opacity: 1;
-}
-
-/* ===============================
-   Item Info
-=============================== */
+/* INFO */
 .item-info {
-    margin-top: 14px;
-    display: flex;
-    justify-content: space-between;
-    font-size: 0.9rem;
+    margin-top:14px;
+    display:flex;
+    justify-content:space-between;
 }
 
-.item-info span {
-    color: #888;
-}
+.item-info span { color:#888; }
 
-/* ===============================
-   Vimeo Modal
-=============================== */
+/* ================= MODAL ================= */
 .video-modal {
-    display: none;
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.85);
-    z-index: 9999;
-    align-items: center;
-    justify-content: center;
+    display:none;
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,.85);
+    z-index:9999;
+    align-items:center;
+    justify-content:center;
 }
 
 .video-inner {
-    position: relative;
-    width: 80%;
-    max-width: 960px;
-    aspect-ratio: 16 / 9;
+    position:relative;
+    width:80%;
+    max-width:960px;
+    aspect-ratio:16/9;
 }
 
 .video-inner iframe {
-    width: 100%;
-    height: 100%;
+    width:100%;
+    height:100%;
 }
 
 .close-btn {
-    position: absolute;
-    top: -40px;
-    right: 0;
-    font-size: 32px;
-    color: white;
-    cursor: pointer;
+    position:absolute;
+    top:-40px;
+    right:0;
+    color:white;
+    font-size:32px;
+    cursor:pointer;
 }
 
-/* ===============================
-   Responsive
-=============================== */
-@media (max-width: 900px) {
-    .gallery {
-        grid-template-columns: 1fr;
-        padding: 20px;
-    }
-    nav {
-        padding: 30px 20px;
-    }
+/* ================= MOBILE ================= */
+@media(max-width:900px){
+    .gallery { grid-template-columns:1fr; padding:20px; }
+    nav { padding:30px 20px; }
 }
 </style>
 </head>
@@ -193,23 +164,21 @@ nav li {
 <body>
 
 <nav>
-    <div class="logo">STUDIO CARZI</div>
+    <div class="logo">
+        <a href="index.html">PORTFOLIO</a>
+    </div>
     <ul>
-        <li>Work</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li><a href="index.html">WORK</a></li>
+        <li><a href="about.html">ABOUT</a></li>
     </ul>
 </nav>
 
 <main class="gallery">
 
-    <!-- ITEM 01 -->
     <div class="item video-item" data-vimeo="76979871">
         <div class="image-wrapper">
             <img src="https://images.unsplash.com/photo-1542038784456-1ea8e935640e?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay">
-                <div class="play-icon"></div>
-            </div>
+            <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
         <div class="item-info">
             <h3>Interior Objects</h3>
@@ -217,7 +186,6 @@ nav li {
         </div>
     </div>
 
-    <!-- ITEM 02 -->
     <div class="item video-item" data-vimeo="22439234">
         <div class="image-wrapper">
             <img src="https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?auto=format&fit=crop&q=80&w=1200">
@@ -229,57 +197,8 @@ nav li {
         </div>
     </div>
 
-    <!-- ITEM 03 -->
-    <div class="item video-item" data-vimeo="146022717">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1515895309268-5173b15baeba?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info">
-            <h3>Editorial Design</h3>
-            <span>2023</span>
-        </div>
-    </div>
-
-    <!-- ITEM 04 -->
-    <div class="item video-item" data-vimeo="395212534">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info">
-            <h3>Architecture Study</h3>
-            <span>2023</span>
-        </div>
-    </div>
-
-    <!-- ITEM 05 -->
-    <div class="item video-item" data-vimeo="1084537">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1529429617124-95b109e86bb8?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info">
-            <h3>Concept Film</h3>
-            <span>2022</span>
-        </div>
-    </div>
-
-    <!-- ITEM 06 -->
-    <div class="item video-item" data-vimeo="357274789">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info">
-            <h3>Motion Experiment</h3>
-            <span>2022</span>
-        </div>
-    </div>
-
 </main>
 
-<!-- Vimeo Modal -->
 <div class="video-modal" id="videoModal">
     <div class="video-inner">
         <span class="close-btn" id="closeBtn">×</span>
@@ -291,21 +210,20 @@ nav li {
 const modal = document.getElementById('videoModal');
 const frame = document.getElementById('vimeoFrame');
 
-document.querySelectorAll('.video-item').forEach(item => {
-    item.addEventListener('click', () => {
-        const id = item.dataset.vimeo;
-        frame.src = `https://player.vimeo.com/video/${id}?autoplay=1`;
-        modal.style.display = 'flex';
-    });
+document.querySelectorAll('.video-item').forEach(item=>{
+    item.onclick=()=>{
+        frame.src=`https://player.vimeo.com/video/${item.dataset.vimeo}?autoplay=1`;
+        modal.style.display='flex';
+    }
 });
 
-document.getElementById('closeBtn').onclick = closeModal;
-modal.onclick = e => { if (e.target === modal) closeModal(); };
-
-function closeModal() {
-    modal.style.display = 'none';
-    frame.src = '';
+function closeModal(){
+    modal.style.display='none';
+    frame.src='';
 }
+
+document.getElementById('closeBtn').onclick=closeModal;
+modal.onclick=e=>{ if(e.target===modal) closeModal(); }
 </script>
 
 </body>
