--- a/index.html
+++ b/index.html
@@ -173,12 +173,13 @@ nav ul li a:hover { opacity:1; }
 <main class="gallery">
 
     <!-- 01 -->
-    <div class="item video-item" data-vimeo="76979871">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1542038784456-1ea8e935640e?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info"><h3>Interior Objects</h3><span>2024</span></div>
+    <div class="item video-item" data-vimeo="941826314">
+    <div class="image-wrapper">
+        <img src="https://vumbnail.com/941826314.jpg" alt="Vimeo Video 941826314">
+        <div class="play-overlay"><div class="play-icon"></div></div>
+    </div>
+    <div class="item-info">
+        <h3>Creative Motion Film</h3> <span>2026</span></div>
     </div>
 
     <!-- 02 -->
@@ -258,3 +259,4 @@ modal.onclick=e=>{ if(e.target===modal) closeModal(); }
 
 </body>
 </html>
+
