--- a/index.html
+++ b/index.html
@@ -3,167 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PORTFOLIO</title>
-
+<title>PORTFOLIO | Auto Title Sync</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
 <style>
 * { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:'Inter', sans-serif; background:#fff; color:#1a1a1a; }
 
-body {
-    font-family:'Inter', sans-serif;
-    background:#fff;
-    color:#1a1a1a;
-}
-
-/* ================= NAV ================= */
-nav {
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:40px 60px;
-    position:sticky;
-    top:0;
-    background:rgba(255,255,255,0.9);
-    z-index:10;
-}
-
-.logo a {
-    text-decoration:none;
-    color:inherit;
-    font-weight:600;
-    letter-spacing:-0.4px;
-}
-
-nav ul {
-    display:flex;
-    gap:40px;
-    list-style:none;
-}
-
-nav ul li a {
-    text-decoration:none;
-    color:inherit;
-    font-size:0.85rem;
-    letter-spacing:1px;
-    opacity:.8;
-}
-
+/* NAV */
+nav { display:flex; justify-content:space-between; align-items:center; padding:40px 60px; position:sticky; top:0; background:rgba(255,255,255,0.9); z-index:10; }
+.logo a { text-decoration:none; color:inherit; font-weight:600; letter-spacing:-0.4px; }
+nav ul { display:flex; gap:40px; list-style:none; }
+nav ul li a { text-decoration:none; color:inherit; font-size:0.85rem; letter-spacing:1px; opacity:.8; }
 nav ul li a:hover { opacity:1; }
 
-/* ================= GALLERY ================= */
-.gallery {
-    display:grid;
-    grid-template-columns:repeat(2, 1fr);
-    gap:40px;
-    padding:0 60px 80px;
-    max-width:1600px;
-    margin:auto;
-}
-
+/* GALLERY */
+.gallery { display:grid; grid-template-columns:repeat(2, 1fr); gap:40px; padding:0 60px 80px; max-width:1600px; margin:auto; }
 .item { cursor:pointer; }
-
-.image-wrapper {
-    position:relative;
-    aspect-ratio:4 / 3;
-    overflow:hidden;
-    background:#eee;
-}
-
-.item img {
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    transition:transform .8s cubic-bezier(.16,1,.3,1);
-}
-
+.image-wrapper { position:relative; width:100%; aspect-ratio: 16 / 9; overflow:hidden; background:#eee; }
+.item img { width:100%; height:100%; object-fit:cover; transition:transform .8s cubic-bezier(.16,1,.3,1); }
 .item:hover img { transform:scale(1.05); }
 
-/* ▶ PLAY ICON */
-.play-overlay {
-    position:absolute;
-    inset:0;
-    background:rgba(0,0,0,.35);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    opacity:0;
-    transition:opacity .4s ease;
-}
-
+/* PLAY ICON */
+.play-overlay { position:absolute; inset:0; background:rgba(0,0,0,.35); display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity .4s ease; }
 .item:hover .play-overlay { opacity:1; }
-
-.play-icon {
-    width:70px;
-    height:70px;
-    border:2px solid #fff;
-    border-radius:50%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-}
-
-.play-icon::before {
-    content:'';
-    margin-left:4px;
-    border-style:solid;
-    border-width:10px 0 10px 16px;
-    border-color:transparent transparent transparent #fff;
-}
+.play-icon { width:70px; height:70px; border:2px solid #fff; border-radius:50%; display:flex; align-items:center; justify-content:center; }
+.play-icon::before { content:''; margin-left:4px; border-style:solid; border-width:10px 0 10px 16px; border-color:transparent transparent transparent #fff; }
 
 /* INFO */
-.item-info {
-    margin-top:14px;
-    display:flex;
-    justify-content:space-between;
-}
+.item-info { margin-top:14px; display:flex; justify-content:space-between; min-height: 1.2rem; }
+.vimeo-title { font-size: 1rem; font-weight: 400; max-width: 80%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+.item-info span { color:#888; font-size: 0.85rem; }
 
-.item-info span { color:#888; }
+/* MODAL */
+.video-modal { display:none; position:fixed; inset:0; background:rgba(0,0,0,.9); z-index:9999; align-items:center; justify-content:center; }
+.video-inner { position:relative; width:85%; max-width:1100px; aspect-ratio:16/9; }
+.video-inner iframe { width:100%; height:100%; }
+.close-btn { position:absolute; top:-45px; right:0; color:white; font-size:40px; cursor:pointer; font-weight: 200; }
 
-/* ================= MODAL ================= */
-.video-modal {
-    display:none;
-    position:fixed;
-    inset:0;
-    background:rgba(0,0,0,.85);
-    z-index:9999;
-    align-items:center;
-    justify-content:center;
-}
-
-.video-inner {
-    position:relative;
-    width:80%;
-    max-width:960px;
-    aspect-ratio:16/9;
-}
-
-.video-inner iframe {
-    width:100%;
-    height:100%;
-}
-
-.close-btn {
-    position:absolute;
-    top:-40px;
-    right:0;
-    color:white;
-    font-size:32px;
-    cursor:pointer;
-}
-
-/* ================= MOBILE ================= */
-@media(max-width:900px){
-    .gallery { grid-template-columns:1fr; padding:20px; }
-    nav { padding:30px 20px; }
-}
+@media(max-width:900px){ .gallery { grid-template-columns:1fr; padding:20px; } nav { padding:30px 20px; } }
 </style>
 </head>
-
 <body>
 
 <nav>
-    <div class="logo"><a href="index.html">PORTFOLIO</a></div>
+    <div class="logo"><a href="index.html">STUDIO CARZI</a></div>
     <ul>
         <li><a href="index.html">WORK</a></li>
         <li><a href="about.html">ABOUT</a></li>
@@ -171,65 +54,47 @@ nav ul li a:hover { opacity:1; }
 </nav>
 
 <main class="gallery">
+    <div class="item video-item" data-vimeo="1160975573">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/1160975573.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+    </div>
 
-    <!-- 01 -->
+    <div class="item video-item" data-vimeo="1160975235">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/1160975235.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+    </div>
+
+    <div class="item video-item" data-vimeo="1077153640">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/1077153640.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+    </div>
+
+    <div class="item video-item" data-vimeo="1076249638">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/1076249638.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+    </div>
+
     <div class="item video-item" data-vimeo="941826314">
-    <div class="image-wrapper">
-        <img src="https://vumbnail.com/941826314.jpg" alt="Vimeo Video 941826314">
-        <div class="play-overlay"><div class="play-icon"></div></div>
-    </div>
-    <div class="item-info">
-        <h3>Creative Motion Film</h3> <span>2026</span></div>
-    </div>
-
-    <!-- 02 -->
-    <div class="item video-item" data-vimeo="22439234">
         <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1494438639946-1ebd1d20bf85?auto=format&fit=crop&q=80&w=1200">
+            <img src="https://vumbnail.com/941826314.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3>Light & Shadow</h3><span>2024</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
     </div>
-
-    <!-- 03 -->
-    <div class="item video-item" data-vimeo="146022717">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1515895309268-5173b15baeba?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info"><h3>Editorial Design</h3><span>2023</span></div>
-    </div>
-
-    <!-- 04 -->
-    <div class="item video-item" data-vimeo="395212534">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info"><h3>Architecture Study</h3><span>2023</span></div>
-    </div>
-
-    <!-- 05 -->
-    <div class="item video-item" data-vimeo="1084537">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1529429617124-95b109e86bb8?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info"><h3>Concept Film</h3><span>2022</span></div>
-    </div>
-
-    <!-- 06 -->
-    <div class="item video-item" data-vimeo="357274789">
-        <div class="image-wrapper">
-            <img src="https://images.unsplash.com/photo-1526318472351-c75fcf070305?auto=format&fit=crop&q=80&w=1200">
-            <div class="play-overlay"><div class="play-icon"></div></div>
-        </div>
-        <div class="item-info"><h3>Motion Experiment</h3><span>2022</span></div>
-    </div>
-
 </main>
 
-<!-- MODAL -->
 <div class="video-modal" id="videoModal">
     <div class="video-inner">
         <span class="close-btn" id="closeBtn">×</span>
@@ -241,22 +106,30 @@ nav ul li a:hover { opacity:1; }
 const modal = document.getElementById('videoModal');
 const frame = document.getElementById('vimeoFrame');
 
-document.querySelectorAll('.video-item').forEach(item=>{
-    item.onclick=()=>{
-        frame.src=`https://player.vimeo.com/video/${item.dataset.vimeo}?autoplay=1`;
-        modal.style.display='flex';
+document.querySelectorAll('.video-item').forEach(item => {
+    const vimeoId = item.dataset.vimeo;
+    const titleElement = item.querySelector('.vimeo-title');
+
+    // 비메오 OEmbed를 통해 제목 자동 추출
+    fetch(`https://vimeo.com/api/oembed.json?url=https://vimeo.com/${vimeoId}`)
+        .then(res => res.json())
+        .then(data => { titleElement.innerText = data.title; })
+        .catch(() => { titleElement.innerText = "Project Video"; });
+
+    item.onclick = () => {
+        frame.src = `https://player.vimeo.com/video/${vimeoId}?autoplay=1&color=ffffff`;
+        modal.style.display = 'flex';
     }
 });
 
-function closeModal(){
-    modal.style.display='none';
-    frame.src='';
+function closeModal() {
+    modal.style.display = 'none';
+    frame.src = '';
 }
 
-document.getElementById('closeBtn').onclick=closeModal;
-modal.onclick=e=>{ if(e.target===modal) closeModal(); }
+document.getElementById('closeBtn').onclick = closeModal;
+modal.onclick = e => { if(e.target === modal) closeModal(); }
 </script>
 
 </body>
 </html>
-
