--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ nav ul li a:hover { opacity:1; }
 <body>
 
 <nav>
-    <div class="logo"><a href="index.html">STUDIO CARZI</a></div>
+    <div class="logo"><a href="index.html">PORTFOLIO</a></div>
     <ul>
         <li><a href="index.html">WORK</a></li>
         <li><a href="about.html">ABOUT</a></li>
@@ -59,7 +59,7 @@ nav ul li a:hover { opacity:1; }
             <img src="https://vumbnail.com/1160975573.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
 
     <div class="item video-item" data-vimeo="1160975235">
@@ -67,7 +67,7 @@ nav ul li a:hover { opacity:1; }
             <img src="https://vumbnail.com/1160975235.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
 
     <div class="item video-item" data-vimeo="1077153640">
@@ -75,7 +75,7 @@ nav ul li a:hover { opacity:1; }
             <img src="https://vumbnail.com/1077153640.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/unreal/ae</span></div>
     </div>
 
     <div class="item video-item" data-vimeo="1076249638">
@@ -83,7 +83,7 @@ nav ul li a:hover { opacity:1; }
             <img src="https://vumbnail.com/1076249638.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
 
     <div class="item video-item" data-vimeo="941826314">
@@ -91,7 +91,7 @@ nav ul li a:hover { opacity:1; }
             <img src="https://vumbnail.com/941826314.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>2026</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/c4d/rs/ae</span></div>
     </div>
 </main>
 
@@ -133,3 +133,4 @@ modal.onclick = e => { if(e.target === modal) closeModal(); }
 
 </body>
 </html>
+
