--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ABOUT | STUDIO CARZI</title>
+<title>ABOUT | PORTFOLIO</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
     /* 기본 스타일 리셋 */
@@ -102,7 +102,7 @@
 <body>
 
 <nav>
-    <div class="logo"><a href="index.html">STUDIO CARZI</a></div>
+    <div class="logo"><a href="index.html">jamece007</a></div>
     <ul>
         <li><a href="index.html">WORK</a></li>
         <li><a href="about.html">ABOUT</a></li>
@@ -118,7 +118,7 @@
             Hello, I am a motion graphics artist based in Seoul. I specialize in creating visually striking 3D motion graphics, including product showcases and brand identity projects. I place great importance on intricate details and emotional storytelling.
         </div>
         <div class="desc-ko">
-            안녕하세요, 서울을 기반으로 활동하는 모션 그래픽 아티스트입니다. 3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 제품 및 브랜드 아이덴티티 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
+            안녕하세요, 모션 그래픽 아티스트 재미스007입니다. 3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 제품 및 브랜드 아이덴티티 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
         </div>
     </section>
 
