--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ABOUT | PORTFOLIO</title>
+<title>ABOUT | JAMECE007</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
     /* 기본 스타일 리셋 */
@@ -102,7 +102,7 @@
 <body>
 
 <nav>
-    <div class="logo"><a href="index.html">jamece007</a></div>
+    <div class="logo"><a href="index.html">PORTFOLIO</a></div>
     <ul>
         <li><a href="index.html">WORK</a></li>
         <li><a href="about.html">ABOUT</a></li>
