--- a/about.html
+++ b/about.html
@@ -138,13 +138,13 @@
         <h2 class="section-title">Contact</h2>
         <div class="desc-en">
             For project inquiries or collaborations, please feel free to reach out via email.<br>
-            <strong>email@example.com</strong>
+            <strong>jamece007@naver.com</strong>
         </div>
     </section>
 </div>
 
 <footer>
-    © 2024-2025 STUDIO CARZI. All RIGHTS RESERVED.
+
 </footer>
 
 </body>
