--- a/index.html
+++ b/index.html
@@ -10,29 +10,48 @@
 body { font-family:'Inter', sans-serif; background:#fff; color:#1a1a1a; }
 
 /* NAV */
-nav { display:flex; justify-content:space-between; align-items:center; padding:40px 60px; position:sticky; top:0; background:rgba(255,255,255,0.9); z-index:10; }
+nav { display:flex; justify-content:space-between; align-items:center; padding:30px 30px; position:sticky; top:0; background:rgba(255,255,255,0.9); z-index:10; }
 .logo a { text-decoration:none; color:inherit; font-weight:600; letter-spacing:-0.4px; }
 nav ul { display:flex; gap:40px; list-style:none; }
 nav ul li a { text-decoration:none; color:inherit; font-size:0.85rem; letter-spacing:1px; opacity:.8; }
 nav ul li a:hover { opacity:1; }
 
-/* GALLERY */
-.gallery { display:grid; grid-template-columns:repeat(2, 1fr); gap:20px; padding:0 30px 40px; max-width:1600px; margin:auto; }
-.item { cursor:pointer; }
-.image-wrapper { position:relative; width:100%; aspect-ratio: 16 / 9; overflow:hidden; background:#eee; }
+/* GALLERY - 좌우 간격 10px 및 전체 너비 제한 */
+.gallery { 
+    display:grid; 
+    grid-template-columns:repeat(3, 1fr); 
+    gap:30px 10px; /* 좌우 간격 10px */
+    padding:0 30px 40px; 
+    max-width: 1400px; /* 썸네일이 너무 커 보이면 이 수치를 줄이세요 */
+    margin:10px auto; 
+}
+.item { cursor:pointer; display: flex; flex-direction: column; align-items: flex-start; }
+
+.image-wrapper { 
+    position:relative; 
+    width:100%; 
+    aspect-ratio: 16 / 9; 
+    overflow:hidden; 
+    background:#eee; 
+}
 .item img { width:100%; height:100%; object-fit:cover; transition:transform .8s cubic-bezier(.16,1,.3,1); }
 .item:hover img { transform:scale(1.05); }
 
 /* PLAY ICON */
 .play-overlay { position:absolute; inset:0; background:rgba(0,0,0,.35); display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity .4s ease; }
 .item:hover .play-overlay { opacity:1; }
-.play-icon { width:70px; height:70px; border:2px solid #fff; border-radius:50%; display:flex; align-items:center; justify-content:center; }
-.play-icon::before { content:''; margin-left:4px; border-style:solid; border-width:10px 0 10px 16px; border-color:transparent transparent transparent #fff; }
+.play-icon { width:40px; height:40px; border:2px solid #fff; border-radius:50%; display:flex; align-items:center; justify-content:center; }
+.play-icon::before { content:''; margin-left:3px; border-style:solid; border-width:6px 0 6px 10px; border-color:transparent transparent transparent #fff; }
 
-/* INFO */
-.item-info { margin-top:14px; display:flex; justify-content:space-between; min-height: 1.2rem; }
-.vimeo-title { font-size: 1rem; font-weight: 400; max-width: 80%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-.item-info span { color:#888; font-size: 0.85rem; }
+/* INFO - 이미지와 밀착 */
+.item-info { 
+    margin-top: 6px; 
+    display:flex; 
+    justify-content:space-between; 
+    width: 100%; 
+}
+.vimeo-title { font-size: 0.9rem; font-weight: 400; max-width: 75%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+.item-info span { color:#888; font-size: 0.75rem; }
 
 /* MODAL */
 .video-modal { display:none; position:fixed; inset:0; background:rgba(0,0,0,.9); z-index:9999; align-items:center; justify-content:center; }
@@ -40,7 +59,8 @@ nav ul li a:hover { opacity:1; }
 .video-inner iframe { width:100%; height:100%; }
 .close-btn { position:absolute; top:-45px; right:0; color:white; font-size:40px; cursor:pointer; font-weight: 200; }
 
-@media(max-width:900px){ .gallery { grid-template-columns:1fr; padding:20px; } nav { padding:30px 20px; } }
+@media(max-width:1024px){ .gallery { grid-template-columns: repeat(2, 1fr); } }
+@media(max-width:600px){ .gallery { grid-template-columns:1fr; padding:20px; } nav { padding:30px 20px; } }
 </style>
 </head>
 <body>
@@ -61,7 +81,6 @@ nav ul li a:hover { opacity:1; }
         </div>
         <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
-
     <div class="item video-item" data-vimeo="1160975235">
         <div class="image-wrapper">
             <img src="https://vumbnail.com/1160975235.jpg">
@@ -69,7 +88,6 @@ nav ul li a:hover { opacity:1; }
         </div>
         <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
-
     <div class="item video-item" data-vimeo="1077153640">
         <div class="image-wrapper">
             <img src="https://vumbnail.com/1077153640.jpg">
@@ -77,7 +95,6 @@ nav ul li a:hover { opacity:1; }
         </div>
         <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/unreal/ae</span></div>
     </div>
-
     <div class="item video-item" data-vimeo="1076249638">
         <div class="image-wrapper">
             <img src="https://vumbnail.com/1076249638.jpg">
@@ -85,13 +102,12 @@ nav ul li a:hover { opacity:1; }
         </div>
         <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
-
-    <div class="item video-item" data-vimeo="941826314">
+  <div class="item video-item" data-vimeo="941826314">
         <div class="image-wrapper">
             <img src="https://vumbnail.com/941826314.jpg">
             <div class="play-overlay"><div class="play-icon"></div></div>
         </div>
-        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/c4d/rs/ae</span></div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
 </main>
 
@@ -109,8 +125,6 @@ const frame = document.getElementById('vimeoFrame');
 document.querySelectorAll('.video-item').forEach(item => {
     const vimeoId = item.dataset.vimeo;
     const titleElement = item.querySelector('.vimeo-title');
-
-    // 비메오 OEmbed를 통해 제목 자동 추출
     fetch(`https://vimeo.com/api/oembed.json?url=https://vimeo.com/${vimeoId}`)
         .then(res => res.json())
         .then(data => { titleElement.innerText = data.title; })
@@ -122,16 +136,10 @@ document.querySelectorAll('.video-item').forEach(item => {
     }
 });
 
-function closeModal() {
-    modal.style.display = 'none';
-    frame.src = '';
-}
-
+function closeModal() { modal.style.display = 'none'; frame.src = ''; }
 document.getElementById('closeBtn').onclick = closeModal;
 modal.onclick = e => { if(e.target === modal) closeModal(); }
 </script>
 
 </body>
 </html>
-
-
