--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ABOUT | JAMECE007</title>
+<title>ABOUT | 정재훈</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
     /* 기본 스타일 리셋 */
@@ -13,15 +13,15 @@
         background:#fff; 
         color:#1a1a1a; 
         line-height: 1.8;
-        word-break: keep-all; /* 한글 줄바꿈 예쁘게 */
+        word-break: keep-all; 
     }
 
-    /* 네비게이션 (기존 index.html과 동일하게 유지) */
+    /* NAV - 인덱스 페이지와 동일하게 수정 */
     nav { 
         display:flex; 
         justify-content:space-between; 
         align-items:center; 
-        padding:40px 60px; 
+        padding:30px 30px; /* 인덱스와 동일하게 30px로 조정 */
         position:sticky; 
         top:0; 
         background:rgba(255,255,255,0.9); 
@@ -35,11 +35,11 @@
     /* About 컨텐츠 레이아웃 */
     .container {
         max-width: 900px;
-        margin: 100px auto;
-        padding: 0 60px;
+        margin: 80px auto 100px; /* 상단 여백 살짝 조정 */
+        padding: 0 30px; /* 인덱스 패딩과 통일감을 위해 30px로 조정 */
     }
 
-    /* 상단 큰 로고 스타일 (uniquemo 스타일) */
+    /* 상단 큰 로고 스타일 */
     .brand-title {
         font-size: 2.5rem;
         font-weight: 600;
@@ -49,7 +49,7 @@
 
     /* 섹션 스타일 */
     section {
-        margin-bottom: 100px;
+        margin-bottom: 80px;
     }
 
     .divider {
@@ -66,19 +66,19 @@
         letter-spacing: 1px;
     }
 
-    /* 텍스트 스타일: 영문과 국문을 구분 */
+    /* 텍스트 스타일 */
     .desc-en {
         font-size: 1.05rem;
         font-weight: 300;
         color: #1a1a1a;
-        margin-bottom: 30px;
+        margin-bottom: 25px;
         max-width: 800px;
     }
 
     .desc-ko {
         font-size: 0.95rem;
         font-weight: 400;
-        color: #555;
+        color: #666; /* 가독성을 위해 살짝 조절 */
         margin-bottom: 50px;
         line-height: 2;
     }
@@ -92,9 +92,10 @@
         text-align: center;
     }
 
+    /* 반응형 모바일 - 인덱스 미디어 쿼리와 일치화 */
     @media(max-width:900px){
-        .container { padding: 0 25px; margin-top: 60px; }
-        nav { padding: 30px 25px; }
+        nav { padding:30px 20px; }
+        .container { padding: 0 20px; margin-top: 60px; }
         .brand-title { font-size: 1.8rem; }
     }
 </style>
@@ -110,42 +111,18 @@
 </nav>
 
 <div class="container">
-    <h1 class="brand-title">STUDIO CARZI</h1>
-
-    <section>
+       <section>
         <div class="divider"></div>
-        <div class="desc-en">
-            Hello, I am a motion graphics artist based in Seoul. I specialize in creating visually striking 3D motion graphics, including product showcases and brand identity projects. I place great importance on intricate details and emotional storytelling.
-        </div>
+
         <div class="desc-ko">
-            안녕하세요, 모션 그래픽 아티스트 재미스007입니다. 3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 제품 및 브랜드 아이덴티티 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
+            안녕하세요, 모션 그래픽 아티스트 정재훈입니다. 3D 모션 그래픽을 활용해 감각적인 애니메이션과 비주얼을 제작하며, 제품 및 브랜드 아이덴티티 작업을 진행하고 있습니다. 섬세한 디테일과 감성적인 연출을 중요하게 생각합니다.
         </div>
     </section>
-
-    <section>
-        <div class="divider"></div>
-        <h2 class="section-title">What I Do</h2>
-        <div class="desc-en">
-            I enjoy crafting charming and whimsical motions while striving for clean and sophisticated designs. Bringing emotion to stories and breathing life into visuals is at the core of my work.
-        </div>
-        <div class="desc-ko">
-            귀엽고 아기자기한 모션을 즐기며, 깔끔하면서도 감각적인 디자인을 지향합니다. 이야기에 감성을 더하고, 화면 속에 생동감을 불어넣는 것이 저의 작업 방식입니다.
-        </div>
-    </section>
-
-    <section>
-        <div class="divider"></div>
         <h2 class="section-title">Contact</h2>
         <div class="desc-en">
-            For project inquiries or collaborations, please feel free to reach out via email.<br>
             <strong>jamece007@naver.com</strong>
         </div>
     </section>
 </div>
-
-<footer>
-
-</footer>
-
 </body>
 </html>
