--- a/index.html
+++ b/index.html
@@ -109,6 +109,20 @@ nav ul li a:hover { opacity:1; }
         </div>
         <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
     </div>
+  <div class="item video-item" data-vimeo="125332661">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/125332661.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
+    </div>
+  <div class="item video-item" data-vimeo="69377238">
+        <div class="image-wrapper">
+            <img src="https://vumbnail.com/69377238.jpg">
+            <div class="play-overlay"><div class="play-icon"></div></div>
+        </div>
+        <div class="item-info"><h3 class="vimeo-title">Loading...</h3><span>hou/rs/ae</span></div>
+    </div>
 </main>
 
 <div class="video-modal" id="videoModal">
