--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <title>ABOUT | 정재훈</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
-    /* 스크롤바 유무에 따른 메뉴 튐 방지 - INDEX와 동일하게 추가 */
+    /* 스크롤바 유무에 따른 메뉴 튐 방지 */
     html { overflow-y: scroll; }
     
     * { margin:0; padding:0; box-sizing:border-box; }
@@ -18,13 +18,13 @@
         word-break: keep-all; 
     }
 
-    /* NAV - INDEX 페이지와 픽셀 단위까지 일치 */
+    /* NAV - INDEX 페이지와 패딩/높이를 완벽하게 일치시킴 */
     nav { 
         display:flex; 
         justify-content:space-between; 
         align-items:center; 
-        padding:0 30px; 
-        height: 30px; /* INDEX와 동일한 높이 */
+        padding: 0 30px;      /* 좌우 패딩 30px */
+        height: 100px;        /* 높이를 INDEX와 동일하게 100px로 고정 (중요) */
         position:sticky; 
         top:0; 
         background:rgba(255,255,255,0.95); 
@@ -32,14 +32,14 @@
         z-index:10; 
     }
     .logo a { text-decoration:none; color:inherit; font-weight:600; letter-spacing:-0.4px; font-size: 1rem; }
-    nav ul { display:flex; gap:30px; list-style:none; }
+    nav ul { display:flex; gap:40px; list-style:none; }
     nav ul li a { text-decoration:none; color:inherit; font-size:0.85rem; letter-spacing:1px; opacity:.8; }
     nav ul li a:hover { opacity:1; }
 
     /* About 컨텐츠 레이아웃 */
     .container {
         max-width: 1400px;
-        margin: 80px auto 100px;
+        margin: 40px auto 100px; /* 상단 여백을 살짝 줄여 밸런스를 맞춤 */
         padding: 0 30px;
     }
 
@@ -51,8 +51,8 @@
 
     /* 반응형 모바일 - INDEX와 동일하게 적용 */
     @media(max-width:900px){
-        nav { padding:0 20px; height: 40px; }
-        .container { padding: 0 20px; margin-top: 60px; }
+        nav { padding:0 20px; height: 80px; } /* 모바일용 높이 통일 */
+        .container { padding: 0 20px; margin-top: 40px; }
     }
 </style>
 </head>
