--- a/about.html
+++ b/about.html
@@ -6,8 +6,14 @@
 <title>ABOUT | 정재훈</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 <style>
-    /* 스크롤바 유무에 따른 메뉴 튐 방지 */
-    html { overflow-y: scroll; }
+    /* 1. 우측 스크롤바 숨기기 */
+    html {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    html::-webkit-scrollbar {
+        display: none;
+    }
     
     * { margin:0; padding:0; box-sizing:border-box; }
     body { 
@@ -16,43 +22,92 @@
         color:#1a1a1a; 
         line-height: 1.8;
         word-break: keep-all; 
+        min-height: 100vh;
     }
 
-    /* NAV - INDEX 페이지와 패딩/높이를 완벽하게 일치시킴 */
+    /* 2. NAV - 인덱스 페이지와 동일하게 유지 */
     nav { 
         display:flex; 
         justify-content:space-between; 
         align-items:center; 
-        padding: 0 30px;      /* 좌우 패딩 30px */
-        height: 100px;        /* 높이를 INDEX와 동일하게 100px로 고정 (중요) */
+        padding: 0 30px;
+        height: 100px;
         position:sticky; 
         top:0; 
         background:rgba(255,255,255,0.95); 
         backdrop-filter: blur(5px);
         z-index:10; 
     }
-    .logo a { text-decoration:none; color:inherit; font-weight:600; letter-spacing:-0.4px; font-size: 1rem; }
-    nav ul { display:flex; gap:40px; list-style:none; }
-    nav ul li a { text-decoration:none; color:inherit; font-size:0.85rem; letter-spacing:1px; opacity:.8; }
+    .logo a { 
+        text-decoration:none; 
+        color:inherit; 
+        font-weight:600; 
+        letter-spacing:-0.4px; 
+        font-size: 1rem; 
+    }
+    nav ul { 
+        display:flex; 
+        gap:40px; 
+        list-style:none; 
+    }
+    nav ul li a { 
+        text-decoration:none; 
+        color:inherit; 
+        font-size:0.85rem; 
+        letter-spacing:1px; 
+        opacity:.8; 
+    }
     nav ul li a:hover { opacity:1; }
 
-    /* About 컨텐츠 레이아웃 */
+    /* 3. About 컨텐츠 레이아웃 */
     .container {
         max-width: 1400px;
-        margin: 40px auto 100px; /* 상단 여백을 살짝 줄여 밸런스를 맞춤 */
+        margin: 40px auto 100px; 
         padding: 0 30px;
     }
 
-    section { margin-bottom: 60px; max-width: 800px; }
-    .divider { width: 20px; height: 1px; background: #1a1a1a; margin-bottom: 30px; }
-    .section-title { font-size: 1.1rem; font-weight: 600; margin-bottom: 15px; letter-spacing: 1px; }
-    .desc-ko { font-size: 0.95rem; font-weight: 400; color: #444; line-height: 2; }
-    .contact-mail { font-size: 1rem; font-weight: 600; color: #1a1a1a; text-decoration: none; border-bottom: 1px solid #1a1a1a; padding-bottom: 2px; }
+    section { 
+        margin-bottom: 60px; 
+        max-width: 800px;
+    }
+    .divider { 
+        width: 20px; 
+        height: 1px; 
+        background: #1a1a1a; 
+        margin-bottom: 30px; 
+    }
+    .section-title { 
+        font-size: 1.1rem; 
+        font-weight: 600; 
+        margin-bottom: 15px; 
+        letter-spacing: 1px; 
+    }
+    .desc-ko { 
+        font-size: 0.95rem; 
+        font-weight: 400; 
+        color: #444; 
+        line-height: 2; 
+    }
 
-    /* 반응형 모바일 - INDEX와 동일하게 적용 */
+    /* 4. 이메일/연락처 스타일 - 간격 2px로 수정 */
+    .contact-link { 
+        font-size: 1rem; 
+        font-weight: 600; 
+        color: #1a1a1a; 
+        text-decoration: none; 
+        transition: opacity 0.3s ease;
+        display: block;
+        margin-bottom: 2px; /* 이 부분을 8px에서 2px로 수정했습니다 */
+    }
+    .contact-link:hover {
+        opacity: 0.5;
+    }
+
+    /* 5. 반응형 모바일 */
     @media(max-width:900px){
-        nav { padding:0 20px; height: 80px; } /* 모바일용 높이 통일 */
+        nav { padding:0 20px; height: 80px; }
         .container { padding: 0 20px; margin-top: 40px; }
+        .logo a { font-size: 0.9rem; }
     }
 </style>
 </head>
@@ -77,7 +132,8 @@
 
     <section>
         <h2 class="section-title">Contact</h2>
-        <a href="mailto:jamece007@naver.com" class="contact-mail">jamece007@naver.com</a>
+        <a href="tel:01025414059" class="contact-link">010 2541 4059</a>
+        <a href="mailto:jamece007@naver.com" class="contact-link">jamece007@naver.com</a>
     </section>
 </div>
 
